<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/margin_large"
    android:paddingLeft="@dimen/margin_large"
    android:paddingRight="@dimen/margin_large"
    android:paddingTop="@dimen/margin_large"
    android:orientation="vertical"
    tools:context=".AddFriendActivity" >

    <EditText
        android:id="@+id/addfriend_key"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:hint="@string/addfriend_friend_key"
        />

    <EditText
        android:id="@+id/addfriend_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:hint="@string/addfriend_friend_message"
        />

    <Button
        android:id="@+id/addFriend"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:hint="@string/addfriend_button"
        android:onClick="addFriend"/>

</LinearLayout>
