<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/avatar"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@color/grey_light"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/friend_profile_note"
        android:id="@+id/friendNoteText"
        android:textStyle="italic"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:textColor="#a0a2a2"
        android:typeface="serif"
        android:textSize="20sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/friend_profile_nick"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:id="@+id/friendAlias"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginEnd="16dp"
        android:id="@+id/friendAliasText" />

    <Button
        android:layout_width="198dp"
        android:layout_height="wrap_content"
        android:text="@string/friend_profile_button"
        android:id="@+id/aliasButton"
        android:layout_gravity="center_horizontal"
        android:onClick="updateAlias" />



</LinearLayout>
</ScrollView>